--- a/EmitterSearch/index.html
+++ b/EmitterSearch/index.html
@@ -12,7 +12,7 @@
         <input id="submitButton" type="submit" value="submit" />
     </form>
     <div id="results"></div>
-    <footer id="footer">Credits: Charj, J60 & TayMcKenzieNZ (GitHub) </footer>
+    <footer id="footer">Credits: Charj, J60 & DurtyFree (GitHub) </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/gridjs/dist/gridjs.umd.js"></script>
     <script src="emitterSearch.js" type="text/javascript"></script>
