Credit change & update title

--- a/EmitterSearch/index.html
+++ b/EmitterSearch/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>Example</title>
+    <title>Emitter Search
+</title>
     <link href="app.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
 </head>
